--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<img src="ab.gif"/>
+<img class="ab.gif" src="/Users/shejal/htmll/ab.gif">
 <div class="form">
     <h1>Login</h1>
     <form action="#" method="post">
