--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<img class="ab.gif" src="/Users/shejal/htmll/ab.gif">
+<img class="ab.gif" src="ab.gif">
+
 <div class="form">
     <h1>Login</h1>
     <form action="#" method="post">
