--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<img class="ab.gif" src="ab.gif">
+<img class="bg.jpg" src="bg.jpg">
 
 <div class="form">
     <h1>Login</h1>
